--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
 </ul>
 <h3>Co- Curricular Activities : </h3><hr>
 <ul class="space">
-<li>Completed online "Web Development" course conducted by Internshala's Trainings.</li></ul>
+<li>Completed online "Web Development" course conducted by Internshala's Trainings.</li>
+  <li>Pursuing online "The Complete 2021 Web developement Bootcamp" course conducted by Udemy.</li></ul>
 <h3>Workshop :</h3><hr>
 <ul class="space">
 <li>"Fundamentals of Networks" at Bharat Sanchar Nigam Limited, Viruthunagar.</li>
